# PathToBot

./: .gitignore  AOB.md  Cargo.toml  DEV.md  README.md  README_EN.md
Reverse/: _Player_UpdatePhysics.c  setter_method.c  strings.txt  struct.h  sub_1400E5E00.c  sub_14010B860.c  sub_1409193B0.c  sub_140D77A40.c  sub_140D9EBD0.c  sub_140DA2C30.c  sub_1417E6CD0.c  sub_141DC7620.c
Reverse/stack_from_cords/: 1_sub_140DA2C30  2_sub_1401D17A0  3_sub_1401D2040  5_sub_140DA2420  6_sub_1415787A0  original__Player_UpdatePhysics
Reverse/stack_from_cords/MyStack(of my RBX)/: 10_sub_14141C800  11_sub_140CDFC00  12_sub_140CE03F0  13_sub_142001430  14_sub_14154F910  15_sub_14203D870  16_sub_141550540  17_sub_140DA0900  1_WinMain  2_sub_1400F77A0  3_sub_1400F7460  4_sub_1400F6DC0  5_sub_140E36950  6_sub_140E358F0  7_sub_1400F6DF0  8_sub_1415488D0  9_sub_14144CF10
src/: client.rs  config.rs  lib.rs  main.rs  memory.rs
src/bot/: actions.rs  mod.rs
src/game/: client.rs  hooks.rs  mod.rs  player.rs
src/ui/: mod.rs
src/utility/: fov.rs  mod.rs  offsets.rs  settings.rs
src/utility/unusable_rightnow/: settings.rs
