[package]
name = "PathToBot"
version = "0.1.0"
edition = "2024"

[lib]
name = "PathToBot" # Имя файла на выходе (будет PathToBot.dll)
crate-type = ["cdylib"]

[dependencies]

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_System_SystemServices",    # Для констант DLL_PROCESS_ATTACH
]



